--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -185,8 +185,8 @@ ja:
     index: 
       addresses: 住所
       credits_earned: 獲得したクレジット
-      desc_1: 私達のパートナーツールを利用して、<strong>無料利用</strong>もしくは友人・知人に紹介して<strong>収益</strong>を得る事が出来ます。
-      desc_2: "Teambox新規有償ユーザーをご紹介頂き、<strong>売上の%{percent}%</strong>を得る事が出来ます。"
+      desc_1_html: 私達のパートナーツールを利用して、<strong>無料利用</strong>もしくは友人・知人に紹介して<strong>収益</strong>を得る事が出来ます。
+      desc_2_html: "Teambox新規有償ユーザーをご紹介頂き、<strong>売上の%{percent}%</strong>を得る事が出来ます。"
       facebook: フェースブック
       get_in_touch: 連絡して下さい
       idea1: Teamboxの使い方、特に初心者のためのガイドを記載したサイトを作成しましょう。
@@ -364,12 +364,12 @@ ja:
       create_first: プロジェクトの最初のチャットを始めましょう!
       define: チャットを使って<b>意思決定のための議論</b>や、<b>チームへの情報更新</b>を集中させることができます。<br/>チャットはスレッドになったコメントで、乱雑なメールによるやりとりに代わるものです。
       empty: このプロジェクトにはまだチャットがありません。
-      footer1: チャットは<b>デザインを共有</b>したり、ミーティングの<b>日程</b>を決めたり、ニュースを<b>周知</b>するのにとても便利です。
-      footer2: スレッドになっているので、過去どんなファイルが送られたか、チームメイトが何を言ったかをさっと振り返ることができます。Teamboxでは、<b>共同作業がそのまま報告</b>なのです。
-      item1: "<b>ファイル共有</b> それぞれのコメントにはファイルを添付できます。"
-      item2: " チャットに<b>参加</b>すると、それ以降の返信をメールやRSSで受け取ることができます。"
-      item3: "<b>印象付け</b> 全てのコメントはテキスト装飾を使って整形できます。"
-      item4: <b>メールの最大限の利用</b>が可能です。ポストに対してメールを使って返信出来ます。
+      footer1_html: チャットは<b>デザインを共有</b>したり、ミーティングの<b>日程</b>を決めたり、ニュースを<b>周知</b>するのにとても便利です。
+      footer2_html: スレッドになっているので、過去どんなファイルが送られたか、チームメイトが何を言ったかをさっと振り返ることができます。Teamboxでは、<b>共同作業がそのまま報告</b>なのです。
+      item1_html: "<b>ファイル共有</b> それぞれのコメントにはファイルを添付できます。"
+      item2_html: " チャットに<b>参加</b>すると、それ以降の返信をメールやRSSで受け取ることができます。"
+      item3_html: "<b>印象付け</b> 全てのコメントはテキスト装飾を使って整形できます。"
+      item4_html: <b>メールの最大限の利用</b>が可能です。ポストに対してメールを使って返信出来ます。
     short_conversation: 
       comment: コメント
       comments: コメント
@@ -776,7 +776,6 @@ ja:
       answer_above_this_line: 回答を投稿するには、このラインより上を返信してください。
       do_not_answer: このメールに返信しないでください。
     confirm: 
-      follow_the_link: "Teamboxの<b>サインアップを完了するため</b>、以下をクリックしてログインしてください:"
       hey: "こんにちは、 %{user_name}!"
       log_in: Teamboxにログインしてください!
       plaintext_link: "リンクが正常に動作しないときは、以下のリンクをブラウザのアドレスバーにコピー&ペーストしてください。:"
@@ -818,7 +817,6 @@ ja:
       task_list: "タスクリスト:"
       view_online: "<a href='%{link}'>このチャットをオンラインで見て</a>、回答や添付ファイルを確認できます。"
     reset_password: 
-      follow_the_link: "Teamboxの<b>新しいパスワードを設定する</b>ために、以下のリンクを使ってログインしてください:"
       hey: "こんにちは、%{user_name}!"
       log_in: Teamboxにログインしてください!
       plaintext_link: "これが正常に動作しないときは、以下のリンクをブラウザのアドレスバーにコピー&ペーストしてください。:"
@@ -841,59 +839,6 @@ ja:
       line4: このプロジェクトでは他のユーザーを招待することはできませんが、それ以外は全部できます。
   form: 
     cancel: キャンセル
-  groups: 
-    column_group: 
-      projects: プロジェクト
-      your_groups: あなたのグループ
-    edit: 
-      submit: 更新
-    errors: 
-      already_own: 既にグループのオーナーです!
-      no_edit: このグループを編集できません
-      not_admin: このグループを管理できません
-      not_enabled: このシステムではグループが有効になっていません
-      upgrade: "<b>独自のドメイン作成</b>には,  %{link}をしてください。"
-      upgrade_account: アップグレードしましょう
-    fields: 
-      description: 説明
-      name: 名前
-      permalink: Permalink
-      permalink_description: グループにアクセスするドメイン
-    header: 
-      leave: 退出
-      remove: 削除
-    index: 
-      description: グループを使うと、他の人と共有したり、いくつかのグループをまとめることができます。
-      groups_in: 参加しているグループ
-      no_groups: まだグループに参加していません
-      remove_project: 削除
-      submit_project: 追加
-      title: グループ
-      whats_this: 何でしょうか？
-      your_group: あなたのグループ
-    logo_fields: 
-      current: 現在のロゴ
-      delete: 削除
-      description: このロゴはこのグループに属する全てのプロジェクトで表示されます
-      upload: アップロード
-    new: 
-      created: グループが作成されました
-      explain: グループは一つだけ作成できます
-      invalid_group: グループが作成できませんでした
-      submit: 作成
-      title: グループの作成
-    primer: 
-      configure_domain: "カスタマイズ化されたサブドメイン、例えばをhttp://yourcompany.teambox.comやhttp://yourdomain.comのように所有されている独自のドメイン名を利用可能です。 <a href='%{link}' target='_blank'>詳しくはこちら</a>. "
-      create_group: グループを作成する
-      explain: "Teamboxはお客様のご希望する<b>Look & Feel</b>を可能にするカスタマイズ機能があります。ログイン・スクリーンに希望するロゴ表示と文字装飾が可能になります。"
-      no_group_create: "グループを所有していません。%{link}"
-    search: 
-      invite: 招待する
-      invite_people: グループに招待する
-      username_or_email: ユーザー名またはeメールアドレス
-    show: 
-      add_project: プロジェクトを追加する
-      edit: 編集
   hours: 
     all_tasks: 全てのタスク
     all_users: 全てのユーザー
@@ -965,7 +910,7 @@ ja:
       username_or_email: チームメートのユーザ名、もしくはeメールを入力してください。
     sent: 
       email_sent: <b>このユーザーにプロジェクトへの招待を受け入れるリンクを含んだeメールを送信しました。もしeメールが見つからないようであれば、迷惑メールに分類されていないか確認するか、異なるeメールアドレスを試して見てください。もし問題が解決しないようでしたら、我々のスタッフに連絡してください。
-  latest_announcement: "Teamboxに関する最新の情報は<a href='http://blog.teambox.com'>ブログ(英語)</a>でお読みになれます。日本語での提供は下半期を2010年秋頃を予定してます。 "
+  last_announcement_html: "Teamboxに関する最新の情報は<a href='http://blog.teambox.com'>ブログ(英語)</a>でお読みになれます。日本語での提供は下半期を2010年秋頃を予定してます。 "
   locales: 
     ar: アラビア語
     bs: ボスニア語
@@ -1129,27 +1074,27 @@ ja:
         description: "ページ in project %{name}"
         title: "%{name}"
     new: 
-      define1: "ここで、あなたのチーム向けに<b>役立つ情報の共有</b>ができます。: ロードマップや、役立つリンク、説明、eメールのテンプレートなどなど・・・"
-      define2: ページの編集は簡単で楽しい作業です。ドラッグ&ドロップで、見た通りに編集することができます。
-      feature1: "<b>共有</b> 全てのチームメイトはプロジェクト中のページを見たり、編集したりできます。"
-      feature2: "<b>公開</b> 共有ページを簡単に公開できます。世界に向け公開しましょう。"
-      feature3: "<b>印刷</b> ページは印刷しやすいようにできています。印刷、またはPDF出力を試してみてください。"
-      feature4: "<b>Wiki</b> ページはwikiのように、プロジェクトの情報に簡単にアクセスできます。"
-      footer1: Teamboxを、よく使う情報を書く<b>共有のホワイトボード</b>のように使ってください。
-      footer2: また、それぞれのページにあるノートには、ファイルを添付することができます。Enjoy!
+      define1_html: "ここで、あなたのチーム向けに<b>役立つ情報の共有</b>ができます。: ロードマップや、役立つリンク、説明、eメールのテンプレートなどなど・・・"
+      define2_html: ページの編集は簡単で楽しい作業です。ドラッグ&ドロップで、見た通りに編集することができます。
+      feature1_html: "<b>共有</b> 全てのチームメイトはプロジェクト中のページを見たり、編集したりできます。"
+      feature2_html: "<b>公開</b> 共有ページを簡単に公開できます。世界に向け公開しましょう。"
+      feature3_html: "<b>印刷</b> ページは印刷しやすいようにできています。印刷、またはPDF出力を試してみてください。"
+      feature4_html: "<b>Wiki</b> ページはwikiのように、プロジェクトの情報に簡単にアクセスできます。"
+      footer1_html: Teamboxを、よく使う情報を書く<b>共有のホワイトボード</b>のように使ってください。
+      footer2_html: また、それぞれのページにあるノートには、ファイルを添付することができます。Enjoy!
       submit: 作成
       title: 新しいページ
     primer: 
       create_first: プロジェクトの最初のページを作成しましょう!
-      define1: "ここで、あなたのチーム向けに<b>役立つ情報の共有</b>ができます。: ロードマップや、役立つリンク、説明、eメールのテンプレートなどなど・・・"
-      define2: ページの編集は簡単で楽しい作業です。ドラッグ&ドロップで、見た通りに編集することができます。
+      define1_html: "ここで、あなたのチーム向けに<b>役立つ情報の共有</b>ができます。: ロードマップや、役立つリンク、説明、eメールのテンプレートなどなど・・・"
+      define2_html: ページの編集は簡単で楽しい作業です。ドラッグ&ドロップで、見た通りに編集することができます。
       empty: このプロジェクトにはまだページがありません。
-      footer1: Teamboxを、よく使う情報を書く<b>共有のホワイトボード</b>のように使ってください。
-      footer2: また、それぞれのページにあるノートには、ファイルを添付することができます。Enjoy!
-      item1: "<b>共有</b> 全てのチームメイトはプロジェクト中のページを見たり、編集したりできます。"
-      item2: "<b>公開</b> 共有ページを簡単に公開できます。世界に向け公開しましょう。"
-      item3: "<b>印刷</b> ページは印刷しやすいようにできています。印刷、またはPDF出力を試してみてください。"
-      item4: "<b>Wiki</b> ページはwikiのように、プロジェクトの情報に簡単にアクセスできます。"
+      footer1_html: Teamboxを、よく使う情報を書く<b>共有のホワイトボード</b>のように使ってください。
+      footer2_html: また、それぞれのページにあるノートには、ファイルを添付することができます。Enjoy!
+      item1_html: "<b>共有</b> 全てのチームメイトはプロジェクト中のページを見たり、編集したりできます。"
+      item2_html: "<b>公開</b> 共有ページを簡単に公開できます。世界に向け公開しましょう。"
+      item3_html: "<b>印刷</b> ページは印刷しやすいようにできています。印刷、またはPDF出力を試してみてください。"
+      item4_html: "<b>Wiki</b> ページはwikiのように、プロジェクトの情報に簡単にアクセスできます。"
     slots: 
       insert_here: ここに挿入
   people: 
@@ -1227,11 +1172,11 @@ ja:
       owner_description: オーナーはプロジェクトの責任者です。オーナーは、別のユーザーにその所有権を譲らない限り、プロジェクトから外すことはできません。
       permalink: URL
       permalink_description: あなたのプロジェクトのアドレスです。なるべく短くしましょう。空白を入れることはできません。
-      public_project: "公開プロジェクト。<em>誰でもアクセス及び参加が<a href='/public'>公開プロジェクトセクション</a>から出来ます。</em> "
+      public_project_html: "公開プロジェクト。<em>誰でもアクセス及び参加が<a href='/public'>公開プロジェクトセクション</a>から出来ます。</em> "
       settings: 
         upgrade: "<b>このプロジェクトをアーカイブから戻し</b>、編集可能にするには、<a href='%{link}'>アップグレードを行い、容量及び機能アップ</a>するか、他のプロジェクトをアーカイブする必要があります。"
         you_cant_unarchive: " %{active}のプロジェクトを利用中です。現在のプランでは %{max} のプロジェクトまでご利用可能です。"
-      tracks_time: "タイム・トラッキング可能です。<em>Will allow users to log time for tasks.</em>"
+      tracks_time_html: "タイム・トラッキング可能です。<em>Will allow users to log time for tasks.</em>"
     index: 
       archived: "%{count}個のアーカイブされたプロジェクト"
       new_project: 新規プロジェクト
@@ -1261,15 +1206,15 @@ ja:
         other: "プロジェクトの追加はこれ以上出来ません。<br/>現在ご利用のプランにおける最大プロジェクト数は%{max}です。"
         zero: "あと %{count}のプロジェクトを現在のプランで追加出来ます。"
     new_primer: 
-      define1: プロジェクトはチームメイトと共有するグループです。
-      define2: "プロジェクト中では、チームメイトは以下のことができます:"
-      feature1: 状況を更新する
-      feature2: チャットを始めたり、返信したりする
-      feature3: ファイルを添付する
-      feature4: タスクを割り当てしたり、確認したりする
-      feature5: タスクにコメントする
-      feature6: それぞれの実行時間を記録する
-      feature7: ページを作成、編集、閲覧する
+      define1_html: プロジェクトはチームメイトと共有するグループです。
+      define2_html: "プロジェクト中では、チームメイトは以下のことができます:"
+      feature1_html: 状況を更新する
+      feature2_html: チャットを始めたり、返信したりする
+      feature3_html: ファイルを添付する
+      feature4_html: タスクを割り当てしたり、確認したりする
+      feature5_html: タスクにコメントする
+      feature6_html: それぞれの実行時間を記録する
+      feature7_html: ページを作成、編集、閲覧する
       footer: このプロジェクトはあなたが所有していますが、いつでも他のユーザーに譲ることができます。
       limited: "無料アカウントでは、ファイルは 50 Mbまでアップロード可能です。"
       upgrade: アカウントをアップグレードしてください!
@@ -1281,15 +1226,15 @@ ja:
       people_in_project: このプロジェクトの参加者
     primer: 
       create_first: 最初のプロジェクトを作成しよう!
-      define1: "プロジェクトを使って、人々と<b>共同作業</b>をしましょう: ウェブサイトやパーティの計画、仕事など..."
-      define2: "あなたは、オンラインの様々な人々と共有するために、<b>好きなだけ多くのプロジェクト</b> を作成することができます。"
+      define1_html: "プロジェクトを使って、人々と<b>共同作業</b>をしましょう: ウェブサイトやパーティの計画、仕事など..."
+      define2_html: "あなたは、オンラインの様々な人々と共有するために、<b>好きなだけ多くのプロジェクト</b> を作成することができます。"
       empty: まだプロジェクトのオーナーでもメンバーでもありません。
       footer: プロジェクトにより、共同作業を集約する事が出来ます。もうチームメンバーにメールを送る必要はありません。
-      item1: "<b>プロジェクトを作成し</b>、名前をつけて <b>友達を招待して</b> ください。"
-      item2: "<b>コメント</b> プロジェクト全体の時系列の中で、あなたが何をしているかについてコメントしましょう。"
-      item3: " 「チャット」で重要な決定について<b>議論</b>しましょう。"
-      item4: "<b>計画</b> 「タスク」で何が必要かを計画し、最新情報を投稿しましょう。"
-      item5: "<b>情報共有</b> それぞれのプロジェクトにある、簡単に編集できる「ページ」で情報共有しましょう。"
+      item1_html: "<b>プロジェクトを作成し</b>、名前をつけて <b>友達を招待して</b> ください。"
+      item2_html: "<b>コメント</b> プロジェクト全体の時系列の中で、あなたが何をしているかについてコメントしましょう。"
+      item3_html: " 「チャット」で重要な決定について<b>議論</b>しましょう。"
+      item4_html: "<b>計画</b> 「タスク」で何が必要かを計画し、最新情報を投稿しましょう。"
+      item5_html: "<b>情報共有</b> それぞれのプロジェクトにある、簡単に編集できる「ページ」で情報共有しましょう。"
     recent_conversations: 
       first: "+ 新たな会話を始める"
       new: "+ 新たな会話"
@@ -1307,7 +1252,7 @@ ja:
   reset_passwords: 
     create: 
       invalid: "このパスワード変更のURLは、無効もしくは失効しています。ホームページから再度パスワード再発行を行ってください。もしうまくいかないときは、%{support}に連絡してください。"
-      not_found: "このeメールのユーザーを見つけられませんでした: %{email}<br/>eメールアドレスを確認して再度実行してください。うまくいかないときは、%{support} に連絡してください。"
+      not_found_html: "このeメールのユーザーを見つけられませんでした: %{email}<br/>eメールアドレスを確認して再度実行してください。うまくいかないときは、%{support} に連絡してください。"
       password_not_updated: 新しいパスワードが無効です。再度実行してください。
       password_updated: パスワードが更新されました。ログインしてください。
     new: 
@@ -1319,10 +1264,8 @@ ja:
       submit: パスワードをリセットする
       title: パスワードをリセット出来ます
     sent: 
-      change_password_now: ログインしました。忘れないように、<b>新しいパスワードを今決めて</b>ください。
-      follow_the_link: eメールに記載されたリンクをたどることで、Teamboxにログインできます。eメールが見つからない場合は、迷惑メールフォルダを探してみてください。
+      follow_the_link_html: eメールに記載されたリンクをたどることで、Teamboxにログインできます。eメールが見つからない場合は、迷惑メールフォルダを探してみてください。
       login_link_sent: "パスワードの再取得のため､メールを%{email}にお送りしました。"
-      not_found: "このメールアドレス<b>%{email}</b>はどのTeamboxユーザーのものでもありません。スペルを確認してみてください。"
       title: パスワードリセット
   search: 
     index: 
@@ -1379,7 +1322,6 @@ ja:
       conversations: チャット
       files: ファイル
       gantt: カレンダーとチャート
-      groups: プロジェクトグループ
       invitations: 招待
       login: ログイン
       overview: 概観
@@ -1528,12 +1470,12 @@ ja:
       create_first: 最初のタスクリストを作成しましょう!
       define: "タスクを使って<b>先の計画を立てたり</b>、<b>進捗を把握したり</b>、<b>作業のレビュー</b>をしたりします。<br/><i>何を? 誰が? いつやるの?</i> タスクには状態と割当て、そして期限を設定することができます。"
       empty: このプロジェクトにはまだタスクリストがありません。
-      footer1: タスクは<b>物事を済ます</b>ための簡単でアジャイルな方法です。他の人にも勧めましょう。
-      footer2: Excelの計画シートや複雑なガントチャートは忘れてしまいましょう!
-      item1: "<b>計画</b> タスクリスト中にタスクを作成してチームメイトに割当てしましょう。"
-      item2: "<b>報告</b> それぞれのタスクにコメントしましたり、ファイルを添付したり、フィードバックを求めたりしましょう。"
-      item3: "<b>フォロー</b> 自分に関係するタスクの更新通知を受け取れます。"
-      item4: "<b>レビュー</b> 完了したタスクも削除されないので、後からメッセージやファイルを確認できます。"
+      footer1_html: タスクは<b>物事を済ます</b>ための簡単でアジャイルな方法です。他の人にも勧めましょう。
+      footer2_html: Excelの計画シートや複雑なガントチャートは忘れてしまいましょう!
+      item1_html: "<b>計画</b> タスクリスト中にタスクを作成してチームメイトに割当てしましょう。"
+      item2_html: "<b>報告</b> それぞれのタスクにコメントしましたり、ファイルを添付したり、フィードバックを求めたりしましょう。"
+      item3_html: "<b>フォロー</b> 自分に関係するタスクの更新通知を受け取れます。"
+      item4_html: "<b>レビュー</b> 完了したタスクも削除されないので、後からメッセージやファイルを確認できます。"
     show: 
       title: "タスクリスト: %{name}"
   tasks: 
@@ -1617,12 +1559,12 @@ ja:
       select_a_file: ファイルを選択
     primer: 
       create_first: プロジェクトの最初のファイルをアップロードしましょう!
-      define1: チーム内でのファイル共有に問題があったことはありませんか?　Teamboxでのファイル共有は簡単です。
-      define2: ここにファイルをアップロードしたり、チャットに添付したり、またタスクやページに添付することもできます。
+      define1_html: チーム内でのファイル共有に問題があったことはありませんか?　Teamboxでのファイル共有は簡単です。
+      define2_html: ここにファイルをアップロードしたり、チャットに添付したり、またタスクやページに添付することもできます。
       empty: このプロジェクトにはファイルがアップロードされていません。
-      item1: "<b>大きなファイル</b> どんなサイズのファイルもアップロードできます。eメールのように制限はありません。"
-      item2: "<b>履歴管理</b> 新しいバージョンのファイルをアップロードすると、変更が管理されます。"
-      item3: "<b>いつでも利用可能</b> ファイルは将来も参照しやすいように、プロジェクト中に保管されます。"
+      item1_html: "<b>大きなファイル</b> どんなサイズのファイルもアップロードできます。eメールのように制限はありません。"
+      item2_html: "<b>履歴管理</b> 新しいバージョンのファイルをアップロードすると、変更が管理されます。"
+      item3_html: "<b>いつでも利用可能</b> ファイルは将来も参照しやすいように、プロジェクト中に保管されます。"
     tooltip: ファイルをアップロード
     upload: 
       download: ダウンロード
@@ -1633,15 +1575,15 @@ ja:
     activation: 
       activated: "あなたのアカウントは活性化されました。Teamboxにようこそ :)"
       already_done: メールアドレスは既に確認されています。これからTeamboxをご利用頂くことができます。
-      invalid: <p>無効もしくは期限の切れたリンクです。メールアドレスとパスワードでログインしてください。</p><p>ログインに関するデーターが不明な場合は、こちらの”パスワードを忘れましたか”リンクを利用ください。</p>
+      invalid_html: <p>無効もしくは期限の切れたリンクです。メールアドレスとパスワードでログインしてください。</p><p>ログインに関するデーターが不明な場合は、こちらの”パスワードを忘れましたか”リンクを利用ください。</p>
       invalid_user: 無効なユーザー
       resent: 活性化のためのメールを再送しました。メールをご確認下さい。
     calendars: 
       clients: 
-        body: "グーグルカレンダー、アップルのiCal、Outlook、Blackbery等の設定方法は、こちらの<a href='%{link}'>知識ベース(英語)</a>を参照ください。"
+        body_html: "グーグルカレンダー、アップルのiCal、Outlook、Blackbery等の設定方法は、こちらの<a href='%{link}'>知識ベース(英語)</a>を参照ください。"
         title: 特定の指示
       how_to: 
-        body: "基本的に、下記のリンクをご利用のカレンダークライアントにインポートすべきです。<a href='%{link}'>知識ベース(英語)</a>をご覧頂くとさらにご理解頂けます。"
+        body_html: "基本的に、下記のリンクをご利用のカレンダークライアントにインポートすべきです。<a href='%{link}'>知識ベース(英語)</a>をご覧頂くとさらにご理解頂けます。"
         title: あなたのカレンダーとの同期方法
       possible_clients: Googleカレンダー、iCal、Outlook、Blackberry等と同期出来ます。
       subscribe_to_all: 全てのプロジェクト
@@ -1674,14 +1616,14 @@ ja:
     feeds: 
       configure: フィードリーダーを設定する事により、プロジェクトに関する動きが、その度通知されます。
       feed_reader: 
-        body: "この場合、<a href='%{link}'>知識ベース(英語)</a>を参照下さい。"
+        body_html: "この場合、<a href='%{link}'>知識ベース(英語)</a>を参照下さい。"
         title: どのニュースリーダーを使えば良いのでしょうか？
       follow_activities: Teamboxの活動内容をPCもしくは携帯電話でニュースリーダーで追う事が可能です。
       import: 
         body: こちらにフォロー可能なフィードリストがあります。フィードリーダーにインポートするには<strong>リンクを右クリック</strong>し、<strong>リンクアドレスをコピーする</strong>を選択してください。
         title: 新規ニュースフィードのインポート方法
       more_tips: 
-        body: "<a href='%{link}'>さらなるTeambox利用方法はこちら</a>. "
+        body_html: "<a href='%{link}'>さらなるTeambox利用方法はこちら</a>. "
         title: もっとヒント
       receive_notifications: PCもしくは携帯電話のフィードリーダーを利用すると、プロジェクトの動きに関する通知を受け取る事が出来ます。
       subscribe_to_all: 全てのプロジェクトの動き
@@ -1737,11 +1679,11 @@ ja:
       new:
         use_this_email: このメールアドレス宛にプロジェクトへの招待状が届いています。プロジェクトにアクセスを希望する場合は、メールアドレスを変更しないでください。登録終了後、メールアドレスの変更が出来ます。
     new: 
-      existing_user: "もしアカウントを既にお持ちならば、<a href='%{login_url}'>ログイン</a> もsくは <a href='%{forgot_url}'>パスワードの再取得をお願いします。</a>. "
+      existing_user_html: "もしアカウントを既にお持ちならば、<a href='%{login_url}'>ログイン</a> もsくは <a href='%{forgot_url}'>パスワードの再取得をお願いします。</a>. "
       no_public_signup: "Public signupsはこのシステムでは承認されていません。"
       submit: アカウントの作成
       title: アカウントの作成
-      you_already_have_an_account: "Teamboxアカウントを%{email}のメールアドレスでお持ちです。 <a href='%{login_link}'>このメールアドレスでログイン</a> もしくはパスワードをお忘れの場合 <a href='%{reset_password_link}'>パスワードをリセットしてください。</a>"
+      you_already_have_an_account_html: "Teamboxアカウントを%{email}のメールアドレスでお持ちです。 <a href='%{login_link}'>このメールアドレスでログイン</a> もしくはパスワードをお忘れの場合 <a href='%{reset_password_link}'>パスワードをリセットしてください。</a>"
       you_are_logged_in: あなたは既にアカウントをお持ちです。別のユーザーとして登録する場合は、まずログアウトをして下さい。
     show: 
       pending_invite: "%{name} 様は現在プロジェクトへの招待受付待ちです。招待受付完了後、追加情報へのアクセス可能です。"
@@ -1781,14 +1723,14 @@ ja:
             <li>順番を整えていないリスト</li>
             <li>まわりに空行を残して下さい</li>
     unconfirmed_email: 
-      follow_the_link: <b>メールをご覧頂き、リンクをクリックして</b>アカウントを活性化して下さい。
-      invitation_sent_to: "あなたのメールアドレスを確認するため、招待状が<i>%{email}</i>に送られました。"
+      follow_the_link_html: <b>メールをご覧頂き、リンクをクリックして</b>アカウントを活性化して下さい。
+      invitation_sent_to_html: "あなたのメールアドレスを確認するため、招待状が<i>%{email}</i>に送られました。"
       problems: "問題が未解決の場合、%{support} までご連絡願います。"
       problems_title: 問題がありますか？
       resend: "メールが見つかりませんか？こちら<a href='%{link}'>再送</a>をクリックする事により、再度活性化のためのメールをお送りします。"
       spam: メールがスパムメールとして分類されていないか確認してください。
       title: メールを確認
-      wrong_address: "メールアドレスが間違っていませんか？もしタイプミスの場合、<a href='%{link}'>登録を中止</a>し、新しいアカウントを有効なメールアドレスにて作成してください。 "
+      wrong_address_html: "メールアドレスが間違っていませんか？もしタイプミスの場合、<a href='%{link}'>登録を中止</a>し、新しいアカウントを有効なメールアドレスにて作成してください。 "
     update: 
       error: 更新したプロファイルを保存出来ません。間違いを修正し、再度行ってください。
       updated: プロフィールを更新しました
