--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -214,11 +214,11 @@ nl:
       create_first: "Maak uw eerste conversatie aan in dit project!"
       define: "Gebruik conversaties om <b>beslissingen te bespreken</b> en <b>update uw team</b> in een gecentraliseerde manier.<br/>Elke conversatie is een draad van opmerkingen, die rommelige e-mails vervangen."
       empty: "Dit project heeft nog geen conversaties."
-      footer1: "Conversaties zijn goed voor <b>een ontwerp te delen</b>, <b>een datum te beslissen</b> voor bijeenkomsten of nieuws te <b>raporteren</b>."
-      item1: "<b>Deel bestanden</b>. Reacties kunnen ook bijlagen bestanden hebben."
-      item2: "<b>Registreer</b> in een conversatie om op de hoogte gehouden te worden voor toekomstige reacties door e-mail of RSS."
-      item3: "<b>Impress</b>. Elke reactie kan worden geformatteerd met tekststijlen."
-      item4: "<b>Inbox-driven?</b> U kunt door middel van uw e-mail reacties plaatsen op conversaties."
+      footer1_html: "Conversaties zijn goed voor <b>een ontwerp te delen</b>, <b>een datum te beslissen</b> voor bijeenkomsten of nieuws te <b>raporteren</b>."
+      item1_html: "<b>Deel bestanden</b>. Reacties kunnen ook bijlagen bestanden hebben."
+      item2_html: "<b>Registreer</b> in een conversatie om op de hoogte gehouden te worden voor toekomstige reacties door e-mail of RSS."
+      item3_html: "<b>Impress</b>. Elke reactie kan worden geformatteerd met tekststijlen."
+      item4_html: "<b>Inbox-driven?</b> U kunt door middel van uw e-mail reacties plaatsen op conversaties."
     short_conversation: 
       comment: reactie
       comments: reacties
@@ -606,7 +606,6 @@ nl:
       answer_above_this_line: "BEANTWOORD BOVEN DEZE LIJN OM EEN ANTWOORD TE STUREN"
       do_not_answer: "Beantwoord deze mail niet."
     confirm: 
-      follow_the_link: "Om uw <b>aanmelding compleet</b> te maken, log dan hier in op de volgende link:"
       hey: "Hey, %{user_name}!"
       log_in: "Log nu in op Teambox!"
       plaintext_link: "Als het niet werkt, kopiëer the volgende link in uw browser:"
@@ -639,7 +638,6 @@ nl:
       task_list: "Takenlijst:"
       view_online: "U kunt <a href='%{link}'>deze conversatie online bekijken</a> om te beantwoorden en bestanden mee geven."
     reset_password: 
-      follow_the_link: "Om een <b>nieuw wachtwoord</b> voor Teambox aan te vragen, moet u inloggen met de volgende link:"
       hey: "Hey, %{user_name}!"
       log_in: "Log nu in op Teambox!"
       plaintext_link: "Als het niet werkt, kopiëer the volgende link in uw browser:"
@@ -686,7 +684,7 @@ nl:
       username_or_email: "Vul uw teammaat zijn gebruikersnaam of e-mail in"
     sent: 
       email_sent: "<b>We hebben zojuist een e-mailbericht gestuurd naar deze gebruiker met een link om de projectuitnodiging te accepteren</b>. Als ze de e-mail niet kunnen vinden, zorg dan dat het niet geclassificeerd is als spam of probeer een ander e-mailadres. Als de problemen aanhouden, neem dan alstublieft contact op met onze medewerkers."
-  latest_announcement: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
+  last_announcement_html: "Read <a href='http://blog.teambox.com'>our blog</a> for the latest news about Teambox."
   locales: 
     nl: Nederlands
   notes: 
@@ -761,27 +759,27 @@ nl:
       rss: 
         description: "Paginas in project %{name}"
     new: 
-      define1: "Hier kan u <b>nuttige informatie delen</b> voor uw team: Een roadmap, interessante links, instructies, e-mail templates..."
-      define2: "Een pagina wijzigen is makkelijk en leuk, met drag-and-drop elementen kunt u ter plaatse wijzigen."
-      feature1: "<b>Delen</b>. Al uw teammaten kunnen the project pagina's bekijken en wijzigen."
-      feature2: "<b>Publiceren</b>. Instant web publishing met gedeelde pagina's. Show the world."
-      feature3: "<b>Printen</b>. Pagina's zijn printvriendelijk. Probeer te printen of naar PDF exporteren!"
-      feature4: "<b>Wiki</b>. Pagina's gedragen zich als een wiki en geven snelle toegang naar de projectinformatie."
-      footer1: "Gebruik Teambox als uw <b>gedeelde whiteboard</b> voor veelgebruikte dingen."
-      footer2: "U kunt ook bijlagen toevegen bij elke pagina in elke notitie. Veel plezier!"
+      define1_html: "Hier kan u <b>nuttige informatie delen</b> voor uw team: Een roadmap, interessante links, instructies, e-mail templates..."
+      define2_html: "Een pagina wijzigen is makkelijk en leuk, met drag-and-drop elementen kunt u ter plaatse wijzigen."
+      feature1_html: "<b>Delen</b>. Al uw teammaten kunnen the project pagina's bekijken en wijzigen."
+      feature2_html: "<b>Publiceren</b>. Instant web publishing met gedeelde pagina's. Show the world."
+      feature3_html: "<b>Printen</b>. Pagina's zijn printvriendelijk. Probeer te printen of naar PDF exporteren!"
+      feature4_html: "<b>Wiki</b>. Pagina's gedragen zich als een wiki en geven snelle toegang naar de projectinformatie."
+      footer1_html: "Gebruik Teambox als uw <b>gedeelde whiteboard</b> voor veelgebruikte dingen."
+      footer2_html: "U kunt ook bijlagen toevegen bij elke pagina in elke notitie. Veel plezier!"
       submit: Aanmaken
       title: "Nieuwe Pagina"
     primer: 
       create_first: "Maak de eerste pagina aan voor dit project!"
-      define1: "Hier kan u <b>nuttige informatie delen</b></b> voor uw team: een roadmap, interessante links, instructies, e-mail templates..."
-      define2: "Een pagina wijzigen is makkelijk en leuk, met drag-and-drop elementen kunt u ter plaatse wijzigen."
+      define1_html: "Hier kan u <b>nuttige informatie delen</b></b> voor uw team: een roadmap, interessante links, instructies, e-mail templates..."
+      define2_html: "Een pagina wijzigen is makkelijk en leuk, met drag-and-drop elementen kunt u ter plaatse wijzigen."
       empty: "Dit project heeft nog geen pagina's"
-      footer1: "Gebruik Teambox als uw <b>gedeelde whiteboard</b> voor veelgebruikte dingen."
-      footer2: "U kunt ook bijlagen toevegen bij elke pagina in elke notitie. Veel plezier!"
-      item1: "<b>Delen</b>. Al uw teammaten kunnen the project pagina's bekijken en wijzigen."
-      item2: "<b>Publiceren</b>. Instant web publishing met gedeelde pagina's. Show the world."
-      item3: "<b>Printen</b>. Pagina's zijn printvriendelijk. Probeer te printen of naar PDF exporteren!"
-      item4: "<b>Wiki</b>. Pagina's gedragen zich als een wiki en geven snelle toegang naar de projectinformatie."
+      footer1_html: "Gebruik Teambox als uw <b>gedeelde whiteboard</b> voor veelgebruikte dingen."
+      footer2_html: "U kunt ook bijlagen toevegen bij elke pagina in elke notitie. Veel plezier!"
+      item1_html: "<b>Delen</b>. Al uw teammaten kunnen the project pagina's bekijken en wijzigen."
+      item2_html: "<b>Publiceren</b>. Instant web publishing met gedeelde pagina's. Show the world."
+      item3_html: "<b>Printen</b>. Pagina's zijn printvriendelijk. Probeer te printen of naar PDF exporteren!"
+      item4_html: "<b>Wiki</b>. Pagina's gedragen zich als een wiki en geven snelle toegang naar de projectinformatie."
     slots: 
       insert_here: "Hier invoegen"
   people: 
@@ -841,29 +839,29 @@ nl:
       submit: "Maak een project aan en nodig mensen uit"
       title: "Maak een project aan"
     new_primer: 
-      define1: "Een project is een gedeelde groep met je teammaatjes."
-      define2: "In een project, elke teamlid kan:"
-      feature1: "Status updates posten."
-      feature2: "Start conversaties of reageer."
-      feature3: "Zend Bijlagen."
-      feature4: "Wijs toe en herzie taken."
-      feature5: "Reageer op taken."
-      feature6: "Track uren besteed op elk item."
-      feature7: "Maak aan, wijzig en bekijk pagina's."
+      define1_html: "Een project is een gedeelde groep met je teammaatjes."
+      define2_html: "In een project, elke teamlid kan:"
+      feature1_html: "Status updates posten."
+      feature2_html: "Start conversaties of reageer."
+      feature3_html: "Zend Bijlagen."
+      feature4_html: "Wijs toe en herzie taken."
+      feature5_html: "Reageer op taken."
+      feature6_html: "Track uren besteed op elk item."
+      feature7_html: "Maak aan, wijzig en bekijk pagina's."
       footer: "Dit project zal tot u behoren. U kunt dit project overdragen aan andere contacten op elk moment."
       limited: "Met een gratis account, kunt u bijlagen uploaden voor dit project tot 50 mb."
       upgrade: "Upgrade nu uw account!"
     primer: 
       create_first: "Maak uw eerste project!"
-      define1: "Gebruik projecten om <b>samen te werken</b> met groepen of personen: Een website, organisatie, een feest, client, werk..."
-      define2: "U kan <b>zoveel projecten aanmaken als u wilt</b> om met verschillende gebruikers online samen te werken."
+      define1_html: "Gebruik projecten om <b>samen te werken</b> met groepen of personen: Een website, organisatie, een feest, client, werk..."
+      define2_html: "U kan <b>zoveel projecten aanmaken als u wilt</b> om met verschillende gebruikers online samen te werken."
       empty: "U bezit of behoort not niet tot projecten."
       footer: "Projecten zijn a gecentraliseerde manier van samenwerken, zodat het nooit meer nodig zal zijn om uw team te e-mailen."
-      item1: "<b>Maak een project aan</b>, geef het een naam en <b>nodig wat contacten uit.</b>"
-      item2: "<b>Commentaar</b> over wat je doet op elk moment in de algemene tijdlijn."
-      item3: "<b>Discussieer </b> over belangrijke beslissingen met Conversaties."
-      item4: "<b>Plan</b> over wat er moet worden gedaan en post updates met taken."
-      item5: "<b>Deel informatie</b> door makkelijke wijzigbare Pagina's voor elk project."
+      item1_html: "<b>Maak een project aan</b>, geef het een naam en <b>nodig wat contacten uit.</b>"
+      item2_html: "<b>Commentaar</b> over wat je doet op elk moment in de algemene tijdlijn."
+      item3_html: "<b>Discussieer </b> over belangrijke beslissingen met Conversaties."
+      item4_html: "<b>Plan</b> over wat er moet worden gedaan en post updates met taken."
+      item5_html: "<b>Deel informatie</b> door makkelijke wijzigbare Pagina's voor elk project."
     show: 
       new_task_list_link: "Nieuwe Takenlijst"
       rss: 
@@ -876,7 +874,7 @@ nl:
   reset_passwords: 
     create: 
       invalid: "De URL om het wachtwoord te veranderen is ongeldig of verlopen. Probeer 'Ik heb mijn wachtwoord vergeten' nog een keer op de startpagina.<br/>Als dat niet werkt, neem dan contact met ons op, op %{support}"
-      not_found: "We kunnen geen gebruiker vinden met e-mailadres: %{email}<br/>Alstublief controleer het e-mailadres en probeer het nog een keer. Als dat niet werkt neem dan contact met ons op, op %{support}"
+      not_found_html: "We kunnen geen gebruiker vinden met e-mailadres: %{email}<br/>Alstublief controleer het e-mailadres en probeer het nog een keer. Als dat niet werkt neem dan contact met ons op, op %{support}"
       password_not_updated: "Het nieuwe wachtwoord is niet geldig. Probeer het nog een keer."
       password_updated: "Het wachtwoord is bijgewerkt. Meld u aan alstublieft."
     new: 
@@ -885,10 +883,8 @@ nl:
       submit: "Stuur mij een link om mijn wachtwoord te resetten"
       title: "U heeft uw wachtwoord vergeten?"
     sent: 
-      change_password_now: "U bent nu ingelogd. <b>Kies nu een nieuw wachtwoord</b> dat u het de volgende keer niet vergeet!"
-      follow_the_link: "Volg de link in het e-mail om uw aan te melden bij Teambox! Als u het niet kan vinden, kijk in uw spam folder."
+      follow_the_link_html: "Volg de link in het e-mail om uw aan te melden bij Teambox! Als u het niet kan vinden, kijk in uw spam folder."
       login_link_sent: "We hebben net een e-mail verzonden naar %{email}. U kan uw wachtwoord ophalen."
-      not_found: "Het e-mailadres <b>%{email}</b> doesn't behoort niet tot een Teambox gebruiker. Misschien heeft u het verkeerd gespeld?"
       title: "Wachtwoord Resetten"
   sessions: 
     fields: 
@@ -1022,12 +1018,12 @@ nl:
       create_first: "Maak uw eerste takenlijst aan voor dit project!"
       define: "Gebruik taken om <b>vooruit te plannen</b>, <b>blijf op de hoogte van de voortgang</b> end <b>herzie wat er gebeurd is</b>.<br/><i>Wat? Wie? Wanneer?</i> Taken kunnen een status hebben, een toegewezen persoon en vervaldata."
       empty: "Dit project heeft nog geen conversaties."
-      footer1: "Taken zijn een eenvoudige en flexibele manier om <b>dingen gedaan te krijgen</b> en anderen dat te laten weten."
-      footer2: "Het is tijd om excel planning sheets en complexe GANTT charts te vergeten!"
-      item1: "<b>Plannen</b>. Maak taken aan in elke lijst en ze toewijzen aan uw teammaten."
-      item2: "<b>Reporteren</b>. Plaats reacties voor elke taak. Plaats bijlagens. Vraag voor feedback."
-      item3: "<b>Volg</b>. Ontvang kennisgevingen voor taken gerelateerd aan u."
-      item4: "<b>Herzien</b>. een voltooide taak is niet verwijderd, dus u heeft later nog steeds toegang tot de berichten en bestanden."
+      footer1_html: "Taken zijn een eenvoudige en flexibele manier om <b>dingen gedaan te krijgen</b> en anderen dat te laten weten."
+      footer2_html: "Het is tijd om excel planning sheets en complexe GANTT charts te vergeten!"
+      item1_html: "<b>Plannen</b>. Maak taken aan in elke lijst en ze toewijzen aan uw teammaten."
+      item2_html: "<b>Reporteren</b>. Plaats reacties voor elke taak. Plaats bijlagens. Vraag voor feedback."
+      item3_html: "<b>Volg</b>. Ontvang kennisgevingen voor taken gerelateerd aan u."
+      item4_html: "<b>Herzien</b>. een voltooide taak is niet verwijderd, dus u heeft later nog steeds toegang tot de berichten en bestanden."
     show: 
       title: "Takenlijst: %{name}"
   tasks: 
@@ -1101,12 +1097,12 @@ nl:
       select_a_file: "Selecteer een bestand"
     primer: 
       create_first: "Upload het eerste bestand bij dit project!"
-      define1: "Altijd problemen gehad om bestanden te delen met uw team? Teambox maakt delen weer makkelijk."
-      define2: "U kunt hier bestanden uploaden or documenten aan deze conversatie, taken of pagina's hechten."
+      define1_html: "Altijd problemen gehad om bestanden te delen met uw team? Teambox maakt delen weer makkelijk."
+      define2_html: "U kunt hier bestanden uploaden or documenten aan deze conversatie, taken of pagina's hechten."
       empty: "Dit project heeft nog geen enkele bestanden."
-      item1: "<b>Grotere bestanden</b>. Upload bestanden van elke grote en vergeet e-mail beperkingen"
-      item2: "<b>Versiebeheer</b>. Upload nieuwe versies van files en blijf op de hoogte van veranderingen."
-      item3: "<b>Altijd beschikbaar</b>. Bestanden blijven in de context van het project voor toekomstig gebruik."
+      item1_html: "<b>Grotere bestanden</b>. Upload bestanden van elke grote en vergeet e-mail beperkingen"
+      item2_html: "<b>Versiebeheer</b>. Upload nieuwe versies van files en blijf op de hoogte van veranderingen."
+      item3_html: "<b>Altijd beschikbaar</b>. Bestanden blijven in de context van het project voor toekomstig gebruik."
     upload: 
       download: Downloaden
       on_: op
@@ -1116,7 +1112,7 @@ nl:
     activation: 
       activated: "Uw account is geactiveerd. Welkom op Teambox :)"
       already_done: "Uw had uw email al bevestigd! U kunt nu Teambox gebruiken."
-      invalid: "<p>Ongeldige of verlopen toegang link. Log in met uw e-mail en wachtwoord.</p><p>Als u uw login gegevens niet meer kan herinneren, Volg dan de link 'wachtwoord vergeten'</p>"
+      invalid_html: "<p>Ongeldige of verlopen toegang link. Log in met uw e-mail en wachtwoord.</p><p>Als u uw login gegevens niet meer kan herinneren, Volg dan de link 'wachtwoord vergeten'</p>"
       invalid_user: "Ongeldige gebruiker"
       resent: "We hebben de activeringsmail herzonden. We've re-sent the activation email. Neem een kijkje in uw inbox!"
     create: 
@@ -1173,25 +1169,25 @@ nl:
         login: "U heeft een gebruikersnaam nodig om in te loggen. Leden kunnen u op uw gebruikersnaam vinden. De gebruikersnaam kan alleen bestaan uit kleine letters. Spaties zijn niet toegestaan. U kunt ook de underscore gebruiken."
         password: "De combinatie van letters, cijfers, hoofdletters en kleine letters is een goed idee."
     new: 
-      existing_user: "Als u al een account heeft, <a href='%{login_url}'>log in</a> of <a href='%{forgot_url}'>herstel uw wachtwoord</a>."
+      existing_user_html: "Als u al een account heeft, <a href='%{login_url}'>log in</a> of <a href='%{forgot_url}'>herstel uw wachtwoord</a>."
       submit: "Maak account aan"
       title: "Maak een Account aan"
       use_this_email: "U heeft voor dit e-mailadres uitnodigingen om projecten te delen. Als bij deze projecten deel wilt nemen, verander dan het wachtwoord niet. U kunt uw wachtwoord veranderen na het aanmeldproces."
-      you_already_have_an_account: "U heeft al een Teambox account voor het adres %{email}. <a href='%{login_link}'>Log in met dit adres</a> of <a href='%{reset_password_link}'>reset uw wachtwoord</a> als u het vergeten heeft."
+      you_already_have_an_account_html: "U heeft al een Teambox account voor het adres %{email}. <a href='%{login_link}'>Log in met dit adres</a> of <a href='%{reset_password_link}'>reset uw wachtwoord</a> als u het vergeten heeft."
       you_are_logged_in: "U heeft al een account. Log eerst uit om als een andere gebruiker aan te melden."
     show: 
       profile: Profiel
       projects: Projecten
       recent_activity_for: "Recente activiteit door %{user_name}"
     unconfirmed_email: 
-      follow_the_link: "<b>open deze e-mail alstublief en volg de link erin</b> om uw account te activeren."
-      invitation_sent_to: "Een e-mail uitnodiging is verzonden naar <i>%{email}</i>, om uw e-mail adres te verifiëren."
+      follow_the_link_html: "<b>open deze e-mail alstublief en volg de link erin</b> om uw account te activeren."
+      invitation_sent_to_html: "Een e-mail uitnodiging is verzonden naar <i>%{email}</i>, om uw e-mail adres te verifiëren."
       problems: "Als u nog steeds problemen heeft neem dan contact met ons op, op %{support}"
       problems_title: Problemen?
       resend: "Kan u de e-mail niet vinden? Klik <a href='%{link}'>hier</a> om de activatie e-mail nog een keer te verzenden."
       spam: "Zorg ervoor dat de e-mail niet is geclassificeerd als spam door uw e-mail client."
       title: "Bevestig uw e-mail"
-      wrong_address: "Verkeerde adres? Als u uw e-mail verkeerd gespeld heeft, <a href='%{link}'>annuleren de aanmeldingsprocedure</a> en maak een nieuwe gebruikersaccount aan met een geldig e-mailadres."
+      wrong_address_html: "Verkeerde adres? Als u uw e-mail verkeerd gespeld heeft, <a href='%{link}'>annuleren de aanmeldingsprocedure</a> en maak een nieuwe gebruikersaccount aan met een geldig e-mailadres."
     update: 
       error: "Kon het geupdate profiel niet opslaan. Corrigeer de fouten en probeer het opnieuw."
       updated: "Gebruikersprofiel is geupdate!"
